<resources>
    <string name="app_name">Favito</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">1874802576114504</string>
    <string name="fb_login_protocol_scheme">fb1874802576114504</string>
    <string name="capture_photo">Capture photo</string>
    <string name="record_video">Record video</string>
    <string name="log_in_out">Log %1$s</string>
    <string name="select_all">Select all</string>
    <string name="num_of_selected_thumbnails">%1$d item(s) selected</string>
    <string name="rescan">Rescan</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="details">Details</string>
    <string name="name">Name:</string>
    <string name="last_modified_date">Last Modified Date:</string>
    <string name="length">Length:</string>
    <string name="ok">Ok</string>
    <string name="path">Path:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="read_me_first">Read Me First</string>
    <string name="read_me_text">Thanks for using Favito.\n\nFavito helps you to capture/upload your great photos/videos to Facebook.\n\nBecause of the limitation of Facebook SDK usage, so please notice that:\n\n+Photo/Video should be less than 12MB.\n\n+Maximum number of total photos/videos is 6\n\n+Supported format photo: .jpg, .png.\n\n+Supported format video: .mp4, .flv.\n\n  Now enjoy the app !!!</string>
    <string name="read_me">Read me</string>
    <string name="desellect">Desellect</string>
</resources>
