<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/photo_capture"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/capture_photo"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/video_record"
        android:icon="@drawable/ic_video_camera"
        android:title="@string/record_video"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/share_to_fb"
        android:icon="@drawable/com_facebook_button_login_logo"
        android:title="@string/share_to_facebook"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/deselect"
        android:icon="@drawable/ic_select_all"
        android:title="@string/desellect"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/scan"
        android:title="@string/rescan"
        android:visible="false"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/detail"
        android:title="@string/details"
        android:visible="false"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/read_me"
        android:title="@string/read_me"
        android:visible="true"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/login_logout"
        android:title="@string/log_in_out"
        android:visible="true"
        app:showAsAction="never|withText"/>

</menu>
