<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="20dp"
              android:background="@color/colorLightDark"
              android:orientation="vertical"
              android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/details"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/name"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/file_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            tools:text="MP4_433133_2324553232.mp4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/last_modified_date"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/last_modified_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            tools:text="12/03/2013 22:11"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/length"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/length_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            tools:text="322 B"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/path"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/path_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            tools:text="android/data/favito/MP4_433133_2324553232.mp4"/>

    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="bottom|right"
        android:background="@android:color/transparent"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"/>

</LinearLayout>